apparantly did something wrong

--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -1,8 +1,12 @@
 \documentclass[a4paper, 11pt]{article}
 
 %Handige usepackages voor essays
+%\usepackage[protrusion=true,expansion=true]{microtype} % Better typography
 \usepackage{graphicx} % Required for including pictures
 \usepackage{wrapfig} % Allows in-line images
+%\usepackage{mathpazo} % Use the Palatino font
+%\usepackage[T1]{fontenc} % Required for accented characters
+%\linespread{1.05} % Change line spacing here, Palatino benefits from a slight increase by default
 
 %Standaard usepackages
 \usepackage{pdfsync}
@@ -37,7 +41,7 @@
 }
 
 %----------------------------------------------------------------------------------------
-%	TITLE
+%  TITLE
 %----------------------------------------------------------------------------------------
 
 \title{\textbf{Internet of Things }\\ % Title
@@ -56,7 +60,7 @@ Imara Speek} % Author
 \maketitle % Print the title section
 
 %----------------------------------------------------------------------------------------
-%	ABSTRACT AND KEYWORDS
+%  ABSTRACT AND KEYWORDS
 %----------------------------------------------------------------------------------------
 
 %\renewcommand{\abstractname}{Summary} % Uncomment to change the name of the abstract to something else
@@ -70,7 +74,7 @@ Morbi tempor congue porta. Proin semper, leo vitae faucibus dictum, metus mauris
 \vspace{30pt} % Some vertical space between the abstract and first section
 
 %----------------------------------------------------------------------------------------
-%	ESSAY BODY
+%  ESSAY BODY
 %----------------------------------------------------------------------------------------
 
 \section{Introduction}
@@ -176,7 +180,7 @@ Morbi tempor congue porta. Proin semper, leo vitae faucibus dictum, metus mauris
 % some future guidelines
 
 %----------------------------------------------------------------------------------------
-%	BIBLIOGRAPHY
+%  BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
 
 \bibliographystyle{plain}
