report internet of things added

--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -147,6 +147,13 @@ Morbi tempor congue porta. Proin semper, leo vitae faucibus dictum, metus mauris
 % Some schematics of the set up
 % source code or pseudo code whether or not that is necessary
 
+\subsection{The internet of things}
+\label{sec:internet}
+\input{internet}
+% presentation about the IoT
+% how should the protocols be included
+% schematic of the internet of things
+
 %----------------------------------------------
 
 \section{Results}
