--- a/proto.tex
+++ b/proto.tex
@@ -1,1 +1,3 @@
 protocols environmental
+The major goal of this report is to be able to develop a real-world application. In order to do this,
+all real-world implications need to be taken into mind. 
