initial text for protocols, need to include diagam and extra explanation

--- a/proto.tex
+++ b/proto.tex
@@ -1,3 +1,6 @@
 protocols environmental
 The major goal of this report is to be able to develop a real-world application. In order to do this,
-all real-world implications need to be taken into mind. 
+all real-world implications need to be taken into consideration. Scenario's were developed to develop a charging protocol 
+that accounts for all possible states. For these scenario's a user wearing a tranceiver wristband is considered. Other 
+viewpoints for a scenario are a user wearing a receiving wristband or the transmitting bar. However, these viewpoints 
+are considerably easier to address and will implements parts of the protocol designed for a tranceiving system. 
