--- a/proto.tex
+++ b/proto.tex
@@ -1,5 +1,3 @@
-The major goal of this report is to be able to develop a real-world application. In order to do this,
-all real-world implications need to be taken into consideration. Scenario's were developed to develop a charging protocol 
-that accounts for all possible states. For these scenario's a user wearing a tranceiver wristband is considered. Other 
-viewpoints for a scenario are a user wearing a receiving wristband or the transmitting bar. However, these viewpoints 
-are considerably easier to address and will implements parts of the protocol designed for a tranceiving system. 
+The major goal of this report is to be able to develop a real-world application. In order to do this, all real-world implications need to be taken into consideration. Scenario's were developed to develop a charging protocol that accounts for all possible states. For these scenario's a user wearing a tranceiver wristband is considered. Other viewpoints for a scenario are a user wearing a receiving wristband or the transmitting bar. However, these viewpoints are considerably easier to address and will implements parts of the protocol designed for a tranceiving system.
+
+There are certain states in which the system can reside depending on their own battery state, the battery state of neighbour nodes and the availability of a charging bar. A charging protocol has to be designed to account for these combinations. We considered three possibilities: an infinite network like design, a hop-to-hop spread of energy or an interactive behavior to selectively share energy. To stimulate interaction through this application we choose to apply a scenario where a user can choose to act upon energy requests and share with friends, or strangers.   
