--- a/proto.tex
+++ b/proto.tex
@@ -12,3 +12,5 @@ There are certain states in which the system can reside depending on its own bat
 A charging protocol has to be designed to account for these combinations. We considered three possibilities: an infinite network like design, a hop-to-hop spread of energy or an interactive behavior to selectively share energy. To stimulate interaction through this application we choose to apply a scenario where a user can choose to act upon energy requests and share with friends, or strangers.
 
 To handle these protocols, an IC has to be added. This way whenever the battery reached Vstarve it will send out a request for energy visually by litting a red LED embedded in the wristband. Neighbouring nodes can then choose to react on this or save their own energy. Whenever the battery dies, the user either has to verbally ask for energy of visit an energy bar.
+
+%blabla
