added intro to internet of things

--- a/internet.tex
+++ b/internet.tex
@@ -1,1 +1,15 @@
-some text about the internet of thins ness
+The assignment of this report conveyed critizing and accessing system-level Internet of Things components in scientififc literature. 
+Because the assigned paper did not include anything IoT related, we will present our own idea.
+In this section we will provide a short introduction to the Internet of Things and its key features, present our idea and focus on the practicality and entrpreneurial aspect of the idea. 
+
+The Internet of Things refers to uniquely identitfiable objects, or things, and their virtual representations in an Internet-like structure. [ADD REF]. 
+The intelligent application is the key feature here. 
+Important aspects to be taken into consideration when designing such a system are security, privacy and scalability. 
+
+The anatomy of Internet of Things is initiated by a certain event, that is detected and logged by devices that include self-properties [ADD REF]. 
+This data is then uploaded by a ubiquitous and interoperable network. 
+The unique feature of the internet of things is that this system is smart and can generate knowledge and by analyzing this data and understands the system. 
+Certain events are then triggered and reported as response. 
+The intelligence of these systems lie in the adapting mechanisms that analyse and understand the environment in order to deal with the complex dynamics of a real-world environment. 
+
+
