--- a/References.bib
+++ b/References.bib
@@ -50,6 +50,74 @@
 %    %month    = "",
 %    %note     = "",
 %}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@article{wireless,
+    author    = "A. Kapoor, J. Pineda de Gyvez",
+    title     = "Architectural Analysis for Wirelessly Powered Computing Platforms",
+    journal   = "IEEE Transactions on very large scale integration (VLSI) systems",
+    %volume   = "",
+    %number   = "",
+    %pages    = "",
+    year      = "2012",
+    month     = "October",
+    %note     = "",
+}
+
+@ONLINE{lecture,
+	author = {Doe, Ringo},
+	title = {This is a test entry of type {@ONLINE}},
+	month = jun,
+	year = {2009},
+	url = {http://www.test.org/doe/}
+}
+
+@misc{thingmagic,
+	author 			= {A. Zauner},
+	title 			= {{On Tour With RFID}},
+	howpublished	= "\url{http://rfid.thingmagic.com/rfid-blog/?Tag=RFID%20Wristbands}", 
+	%month 			= {August},
+	year 			= {2012},
+	note			= "[Online; accessed 28-October-2013]"
+}
+
+@ONLINE{sxsw,
+	%author = {},
+	title = {SXSW RFID Policy},
+	%month = August,
+	year = 2013,
+	url = {http://sxsw.com/rfid-policy}
+}
+
+@ONLINE{coachella,
+	%author = {},
+	title = {2013 Wristband Registration},
+	%month = August,
+	year = 2013,
+	url = {http://www.coachella.com/festival-passes/about-wristbands}
+}
+
+@ONLINE{bonnaroo,
+	%author = {},
+	title = {Bonnaroo 2013 Wristband Information},
+	%month = August,
+	year = 2013,
+	url = {http://www.bonnaroo.com/tickets/wristband-info/}
+}
+
+@article{Iamp,
+    author    = "",
+    title     = "ref still",
+    journal   = "",
+    %volume   = "",
+    %number   = "",
+    %pages    = "",
+    year      = "XXXX",
+    %month    = "",
+    %note     = "",
+}
+
+
 
     
