--- a/internet.tex
+++ b/internet.tex
@@ -2,14 +2,19 @@ The assignment of this report conveyed critizing and accessing system-level Inte
 Because the assigned paper did not include anything IoT related, we will present our own idea.
 In this section we will provide a short introduction to the Internet of Things and its key features, present our idea and focus on the practicality and entrpreneurial aspect of the idea. 
 
-The Internet of Things refers to uniquely identitfiable objects, or things, and their virtual representations in an Internet-like structure. [ADD REF]. 
+The Internet of Things refers to uniquely identitfiable objects, or things, and their virtual representations in an Internet-like structure. \cite{lecture}. 
 The intelligent application is the key feature here. 
 Important aspects to be taken into consideration when designing such a system are security, privacy and scalability. 
 
-The anatomy of Internet of Things is initiated by a certain event, that is detected and logged by devices that include self-properties [ADD REF]. 
+The anatomy of Internet of Things is initiated by a certain event, that is detected and logged by devices that include self-properties \cite{lecture}. 
 This data is then uploaded by a ubiquitous and interoperable network. 
 The unique feature of the internet of things is that this system is smart and can generate knowledge and by analyzing this data and understands the system. 
 Certain events are then triggered and reported as response. 
 The intelligence of these systems lie in the adapting mechanisms that analyse and understand the environment in order to deal with the complex dynamics of a real-world environment. 
 
-
+Internet of Things has already been employed at multiple festivals, while it was initially used as a ticketing solution in 2004 at the SXSW festival in Austin. 
+It emerged in the form of wristbands and cut down significantly on gate crashing and lost tickets \cite{thingmagic}. 
+SXSW announced that each tag contained a unique ID code, correlated with personal information availabe by SXSW \cite{sxsw}. 
+It has further been introduced at Coachella and Bonnaroo. \cite{coachella} \cite{bonnaroo} 
+RFID now even support cashlesh payments and integration with social networks, allowing people to upload pictures to facebook via the so-called "Live Click Stations"\cite{thingmagic}.
+We can conlude that it safe to say that the Internet of Things hasn't reached its peak yet concerning festival and concerts. 
