Internet of things finished including image

--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -203,6 +203,7 @@ Imara Speek} % Author
 %  BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
 
+%TODO add references to websites. 
 \bibliographystyle{plain}
 \bibliography{References}
 %\printbibliography[title=References]
