--- a/References.bib
+++ b/References.bib
@@ -53,15 +53,15 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-@article{wireless,
+@article{paper,
     author    = "A. Kapoor, J. Pineda de Gyvez",
     title     = "Architectural Analysis for Wirelessly Powered Computing Platforms",
     journal   = "IEEE Transactions on very large scale integration (VLSI) systems",
     %volume   = "",
     %number   = "",
     %pages    = "",
-    year      = "2012",
-    month     = "October",
+    month     = "october",
+    year      = {2012},
     %note     = "",
 }
 
@@ -76,18 +76,17 @@
 @misc{thingmagic,
 	author 			= {A. Zauner},
 	title 			= {{On Tour With RFID}},
-	howpublished	= "\url{http://rfid.thingmagic.com/rfid-blog/?Tag=RFID%20Wristbands}", 
-	%month 			= {August},
+	month 			= aug,
 	year 			= {2012},
-	note			= "[Online; accessed 28-October-2013]"
+	howpublished	= "\url{http://rfid.thingmagic.com/rfid-blog/?Tag=RFID%20Wristbands}", 
 }
 
-@ONLINE{sxsw,
-	%author = {},
-	title = {SXSW RFID Policy},
-	%month = August,
-	year = 2013,
-	url = {http://sxsw.com/rfid-policy}
+@misc{sxsw,
+	author 			= {SXSW},
+	title 			= {{SXSW RFID Policy}},
+	month 			= aug,
+	year 			= {2012},
+	howpublished	= "\url{http://sxsw.com/rfid-policy}", 
 }
 
 @ONLINE{coachella,
