added parts analysis and realization

--- a/References.bib
+++ b/References.bib
@@ -78,7 +78,7 @@
 	title 			= {{On Tour With RFID}},
 	month 			= aug,
 	year 			= {2012},
-	howpublished	= "\url{http://rfid.thingmagic.com/rfid-blog/?Tag=RFID%20Wristbands}", 
+	howpublished	= "\url{http://rfid.thingmagic.com/rfid-blog/?Tag=RFID%20Wristbands}",
 }
 
 @misc{sxsw,
@@ -86,7 +86,7 @@
 	title 			= {{SXSW RFID Policy}},
 	month 			= aug,
 	year 			= {2012},
-	howpublished	= "\url{http://sxsw.com/rfid-policy}", 
+	howpublished	= "\url{http://sxsw.com/rfid-policy}",
 }
 
 @ONLINE{coachella,
@@ -105,7 +105,7 @@
 	url = {http://www.bonnaroo.com/tickets/wristband-info/}
 }
 
-@article{Iamp,
+@article{IAmp,
     author    = "",
     title     = "ref still",
     journal   = "",
@@ -116,7 +116,3 @@
     %month    = "",
     %note     = "",
 }
-
-
-
-    
