--- a/realize.tex
+++ b/realize.tex
@@ -1,11 +1,13 @@
-Our major goal is to provide with an efficient solution that meets the challenges in battery charging systems using wireless power transfer the best.
+Our major goal is to provide with an efficient solution that best meet the challenges in battery charging systems using wireless power transfer.
 Those challenges include:
 \begin{enumerate}
-\item Charging the battery as quickly as possible. 
-Though batteries can store a large amount of charge, there is a limit to how fast a battery can be charged. This limit gets smaller with the size, or capacity of the battery. If the battery is smaller, the charging current limit will also be smaller. Exceeding this limit will deteriorate the battery's life. To overcome this difficulty we propose adding a super capacitor in parallel with the battery. Super capacitors are known to to hold a less amount of charge then same sized batteries, but they are capable of charging much faster\cite{IAmp}.
-\item Providing a longer battery life with a large charge-to-discharge ratio.
-In our scenario we want to make the charging interval as small as possible which requires a need to store as much charging current as possible in a short interval. That makes the addition of a super capacitor an ideal solution to overcome the battery charging limitation. During the charging interval, a super capacitor can store a large amount of charging current. This current can be used to charge the battery with a slow pace. This provides a long battery life in terms of a large charge-to-discharge ratio.
- 
-\item Working out an efficient protocol for sharing the available charge.
+\item Charging the battery as quickly as possible.
+Though batteries can store large amount of charge but unfortunately there is a limit to how fast a battery can be charged and this limit gets smaller with the size (capacity) of a battery. Smaller the battery, smaller the charging current limit will be and exceeding this limit will deteriorate battery's life. To overcome this difficulty we proposed adding a super capacitor in parallel with a battery. Even though super capacitors can hold less amount of charge compared to the same size battery but they can be charged much faster \cite{IAmp}.
+\item Providing long battery life with large charge to discharge ratio.
+In our scenario we want to make the charging interval as small as possible which requires a need to store as much charging current as possible in this short interval and that makes the addition of super capacitor an ideal solution to overcome the battery charging limitation. During the charging interval, super capacitor can store large amount of charging current and then later use this current to charge the battery with slow pace. Which provides long battery life in terms of large charge to discharge ratio.
+
+\item Working out efficient protocol for sharing the available charge.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{enumerate}
+
