--- a/analysis.tex
+++ b/analysis.tex
@@ -7,6 +7,13 @@
 \label{fig:design1}
 \end{figure}
 
+\begin{figure}[h!]
+\centering
+\includegraphics[width=1\textwidth]{rec_design.pdf}
+\caption{Internet of things chain of actions}
+\label{fig:rec_des}
+\end{figure}
+
  split the figure into charge cycle and discharge cycle
 The Figure \ref{fig:design1}
 shows a low level schematic of the receiver and charging circuit which will be the main focus of our project. The induction current $i_r$ induced by the transmitter through magnetic coupling will be the main source of charging current. The current $i_c$ charges the super capacitor $C_s$ up to the capacity of $V_c$, in our case $V_c \leq 5$ Volts the maximum voltage rating of super capacitor, $i_b$ charges the battery and $i_L$ is consumed by the current limiting resistor $R_L$  and a light source $LED$. Where $i_r = i_c + i_b +i_L$ . Now in analysis lets first consider the efficiency ${\eta}$ of the circuit.
@@ -46,9 +53,53 @@ $R_c$ can be chosen using $R_c = \frac { V_{reg}}{i_r} $ for maximum allowed $i_
 \centering
 \includegraphics[width=1\textwidth]{rec_design.pdf}
 \caption{Internet of things chain of actions}
-\label{fig:rec_des}
+\label{fig:ch_profile}
 \end{figure}
 
 
-Figure \ref{fig:rec_des}
+Figure \ref{fig:ch_profile}
 shows charging, discharging and idle profile of the super capacitor during the system operation. In initial charging cycle $t_{ci}$, $C_s$ is charged using $i_r(t)$ following equation \ref{eq:cap} and during discharge cycle $t_d$, the $i_r(t) = 0$ and discharge current is supplied in the form of $i_b$ and $i_L$. Finally during the equilibrium cycle $t_{eq}$ the voltage is reduced to equal the battery voltage ($V_l = 3$ V) such that no current flows between the battery and super capacitor and $i_b = 0$, at this stage only battery's charge is used to power the LED. At last during the second charge cycle $t_{c2}$, the capacitor's charging starts from equilibrium voltage instead of 0 and is charged to $V_{reg}$ un till the discharge cycle starts again.
+
+
+
+
+
+\subsection{Charge to Discharge ratio}
+If current $i_r$ is provided for a time period t then how long the system will keep running with this provided current is defined by the charge to discharge ratio $C_r$ and is given as
+
+\begin{equation}\label{eq:cdr}
+ C_r(t) = \frac{i_r(t)}{i_L}
+\end{equation}
+where $i_r(t) = \frac {5-V_c(t)}{R_c}$ is the current provided for charging at time t and is given by
+
+\begin{equation}\label{eq:ir}
+ i_r(t) = \frac {5-V_c(t)}{R_c}
+\end{equation}
+
+
+
+
+
+\begin{figure}[h!]
+\centering
+\includegraphics[width=1\textwidth]{rec_design.pdf}
+\caption{Internet of things chain of actions}
+\label{fig:cr}
+\end{figure}
+
+As $C_r(t)$ is only meaningful during the time when $i_r(t) \neq 0$ which corresponds to time intervals $t_i$ and $t_n$ in the figure \ref{fig:ch_profile}. Hence we can plot $C_r(t)$ for these intervals as shown in figure \ref{fig:cr} (a) and \ref{fig:cr} (b). From figures we can observe that $ C_r(t)$ decreases with time till the value of 2. This is because of the capacitor's charging nature, as $C_s$ starts to charge up,$ V_c(t)$ starts increasing which decreases the value of $ i_r(t)$ [eq:\cite{eq:ir}] and eventually $C_r(t)$. 
+To make more meaningful analysis of charge to discharge ratio one can find the average value of $C_r(t)$ using
+\begin{equation}\label{eq:cravg}
+C_{avg} = \frac{1}{T}\int\limits_t C_r(t) \mathrm{d}t.
+\end{equation}
+In figures \ref{fig:cr} for $t_i$ and $t_n$ we can see the value of $ C_{avg}$ to be 6 and 3.14 respectively. The value 3.14 for $t_n$ is of more importance as this value represents the rest of the charging cycles through out the system operation. $i_r(t)$ is responsible for the decrease in $C_r(t)$ which means that the receiving energy is not fully exploited. $C_{avg}$ can be further improved if we can somehow exploit the $i_r(t)$ to its maximum value for all times t. This can be achieved by using a component that can provide constant current regardless of the change at its output voltage. Such components have internal DC to DC convertor and are referred as constant current capacitor/battery chargers. If such a component is added to charge the super capacitor than it is possible to get $i_r(t)$ as constant maximum allowed value for all times t.
+
+
+\begin{figure}[h!]
+\centering
+\includegraphics[width=1\textwidth]{rec_design.pdf}
+\caption{Internet of things chain of actions}
+\label{fig:crconst}
+\end{figure}
+
+ For constant$ i_r$, $C_r(t)$ profile is shown in figure \ref{fig:crconst}, we can observe that $C_r(t)$ value has been improved to 15 and it stays constant for all values of t.
