--- a/analysis.tex
+++ b/analysis.tex
@@ -1,11 +1,5 @@
 
 
-\begin{figure}[h!]
-\centering
-\includegraphics[width=1\textwidth]{design.pdf}
-\caption{Internet of things chain of actions}
-\label{fig:design1}
-\end{figure}
 
 \begin{figure}[h!]
 \centering
@@ -14,9 +8,8 @@
 \label{fig:rec_des}
 \end{figure}
 
- split the figure into charge cycle and discharge cycle
-The Figure \ref{fig:design1}
-shows a low level schematic of the receiver and charging circuit which will be the main focus of our project. The induction current $i_r$ induced by the transmitter through magnetic coupling will be the main source of charging current. The current $i_c$ charges the super capacitor $C_s$ up to the capacity of $V_c$, in our case $V_c \leq 5$ Volts the maximum voltage rating of super capacitor, $i_b$ charges the battery and $i_L$ is consumed by the current limiting resistor $R_L$  and a light source $LED$. Where $i_r = i_c + i_b +i_L$ . Now in analysis lets first consider the efficiency ${\eta}$ of the circuit.
+
+The Figure \ref{fig:rec_des} shows a low level schematic of the receiver and charging circuit which will be the main focus of our project. The induction current $i_r$ induced by the transmitter through magnetic coupling will be the main source of charging current. The current $i_c$ charges the super capacitor $C_s$ up to the capacity of $V_c$, in our case $V_c \leq 5$ Volts the maximum voltage rating of super capacitor, $i_b$ charges the battery and $i_L$ is consumed by the current limiting resistor $R_L$  and a light source $LED$. Where $i_r = i_c + i_b +i_L$ . Now in analysis lets first consider the efficiency ${\eta}$ of the circuit.
 If $P_{o}$ is the power consumed by the receiver and $P_{i}$ is the power provided by the transmitter, ignoring small power drops across $D_r$ and $C_r$  then:
 \begin{equation}\label{eq:effb}
  {\eta} = \frac{P_o}{P_i}
@@ -30,7 +23,7 @@ For normal brightness of $LED$ with forward voltage drop of $V_{drop} = 1.7 $ Vo
  R_L = \frac{V_l - V_{drop}}{i_L}
 \end{equation}
 To find out with what power ratings of $R_L$ should be used we can use $P_L = {i_L}^2 \times R_L $ which gives us $P_L = 400 \mu$ Watts, which is the power dissipated at $R_L$ and can be avoided if we use a LED that has exactly the same forward voltage drop $V_{drop}$ as the battery output $V_l$ that will remove the need of $R_L$. However, LED is very sensitive to even small change in the applied voltage, a voltage change of 0.1 Volt can cause the LED current $i_L$ to shot up beyond the limits hence a more careful consideration is required if one chooses to omit the current limiting resistor $R_L$.
-%\subsection{Battery Life}
+\subsubsection{Battery Life}
 The battery that we are using has a capacity of 50 mAh, which means if current $I_B$ of 50 mA  is continuously drawn from the battery then it can last for one hour. To find out total battery life for our circuit we need to consider the total power consumed $P_c$, for our case $P_c = i_L \times V_l $ from which we can calculate total life of fully charged battery.
 
  $Total Battery Life = \frac{Battery Capacity}{Power Consumed}$
@@ -39,7 +32,7 @@ The battery that we are using has a capacity of 50 mAh, which means if current $
                     $= 2.5 hours$
 
 
-%\subsection{Charging Profile}
+\subsubsection{Charging Profile}
 Now lets consider how the charging and discharging of the receiver circuit works. According to manufacturer specification $i_r \leq 400 $ mA , which enforces the limit for the system to function properly.
 In figure %~\ref{fig:rec_design}
 the super capacitor $C_s$ has very low series resistance of $0.07 \Omega$ compared to $R_L = 65 \Omega$ hence during charging we can say that $i_c \approx i_r$ and if the $i_r(t)$ is not constant and depends on time then the capacitor charging is governed by the following equation
@@ -51,20 +44,19 @@ $R_c$ can be chosen using $R_c = \frac { V_{reg}}{i_r} $ for maximum allowed $i_
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=1\textwidth]{rec_design.pdf}
+\includegraphics[width=1\textwidth]{cd_cycle.pdf}
 \caption{Internet of things chain of actions}
 \label{fig:ch_profile}
 \end{figure}
 
 
-Figure \ref{fig:ch_profile}
-shows charging, discharging and idle profile of the super capacitor during the system operation. In initial charging cycle $t_{ci}$, $C_s$ is charged using $i_r(t)$ following equation \ref{eq:cap} and during discharge cycle $t_d$, the $i_r(t) = 0$ and discharge current is supplied in the form of $i_b$ and $i_L$. Finally during the equilibrium cycle $t_{eq}$ the voltage is reduced to equal the battery voltage ($V_l = 3$ V) such that no current flows between the battery and super capacitor and $i_b = 0$, at this stage only battery's charge is used to power the LED. At last during the second charge cycle $t_{c2}$, the capacitor's charging starts from equilibrium voltage instead of 0 and is charged to $V_{reg}$ un till the discharge cycle starts again.
+Figure \ref{fig:ch_profile} shows charging, discharging and idle profile of the super capacitor during the system operation. In initial charging cycle $t_{ci}$, $C_s$ is charged using $i_r(t)$ following equation \ref{eq:cap} and during discharge cycle $t_d$, the $i_r(t) = 0$ and discharge current is supplied in the form of $i_b$ and $i_L$. Finally during the equilibrium cycle $t_{eq}$ the voltage is reduced to equal the battery voltage ($V_l = 3$ V) such that no current flows between the battery and super capacitor and $i_b = 0$, at this stage only battery's charge is used to power the LED. At last during the second charge cycle $t_{c2}$, the capacitor's charging starts from equilibrium voltage instead of 0 and is charged to $V_{reg}$ un till the discharge cycle starts again.
 
 
 
 
 
-\subsection{Charge to Discharge ratio}
+\subsubsection{Charge to Discharge ratio}
 If current $i_r$ is provided for a time period t then how long the system will keep running with this provided current is defined by the charge to discharge ratio $C_r$ and is given as
 
 \begin{equation}\label{eq:cdr}
