changed order of paper, added to realization and added photo of wireless power set

--- a/Project3_report.tex
+++ b/Project3_report.tex
@@ -127,7 +127,7 @@ Imara Speek} % Author
 % short introduction to the scenario
 % how does this include the priorly introduced paper
 
-\subsection{Working towards a realization}
+\subsection{Initial proposal of our wireless transfer system}
 \label{sec:realize}
 \input{realize}
 % what are our goals --> quick charging and long battery life,a final product, IoT element and some protocols and computing policies
@@ -142,7 +142,11 @@ Imara Speek} % Author
 % present Internet of Things ness
 
 %-----------------------------------------------
+\section{Analysis of the system design}
+\label{sec:analysis}
+\input{analysis}
 
+%---------------------------------------------
 \section{The proposed system design}
 \label{sec:proposed}
 \input{proposed}
@@ -155,10 +159,6 @@ Imara Speek} % Author
 % why we choose for these solutions, justify software, procedure and hardware
 % Some schematics of the set up
 % source code or pseudo code whether or not that is necessary
-
-\subsection{Analysis of the system design}
-\label{sec:analysis}
-\input{analysis}
 
 \subsection{The internet of things}
 \label{sec:internet}
